<resources>
    <string name="object_prompt">Choose an object to detect</string>
    <string name="app_name">RoboVision</string>
    <string name="btn_filter">Filter</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>
    <string name="calibration_heading">Calibrated:</string>
    <string name="bt_activity_btn">Bluetooth</string>
    <string name="btn_drive">Drive</string>
    <string name="send_test_bit_text">Send Test Bit</string>
    <string name="rx">RX:</string>
    <string name="Remote">Remote</string>
    <string name="Reverse">Reverse</string>
    <string name="Forward">Forward</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="select_object_to_detect">Select object to detect</string>
    <string name="btn_VC0">Voice Control 1</string>
    <string name="btn_VC1">Voice Control 2</string>
    <string name="voice_control">Voice Command</string>
    <string name="remote_control">Remote Control</string>
    <string name="fire_pull">Stream Video</string>
    <string name="discover_new_devices">Discover New Devices</string>
    <string name="show_paired_devices">Show paired Devices</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="status">Status:</string>
    <string name="read_buffer">Read Buffer</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="gpsData">Location</string>
    <string name="calibrate">Calibrate</string>
    <string name="lat">LAT</string>
    <string name="lon">LON</string>
    <string name="server">Server</string>
    <string name="color_blob_detection">Detect Colors</string>
    <string name="connection">Remote Connection</string>
</resources>