<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/drive_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_drive"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/calibrate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrate" />

            <Button
                android:id="@+id/opencv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_blob_detection" />

            <Button
                android:id="@+id/server_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server" />

            <Button
                android:id="@+id/gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpsData"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>