<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".bluetooth.BluetoothActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <CheckBox
                android:id="@+id/checkboxTestBit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:text="@string/send_test_bit_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/rx"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/readBuffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/read_buffer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bluetoothStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/bluetooth_status" />
            </LinearLayout>

            <Button
                android:id="@+id/scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/bluetooth_on"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/bluetooth_off"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/PairedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/show_paired_devices"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/discover_new_devices"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/remote_control"
                android:textColor="@android:color/white"
                android:visibility="visible" />

            <Button
                android:id="@+id/voice_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/voice_control"
                android:textColor="@android:color/white"
                android:visibility="visible" />
            <Button
                android:id="@+id/fire_pull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="fire_pull"
                android:textColor="@android:color/white"
                android:visibility="visible" />

            <ListView
                android:id="@+id/devicesListView"
                android:layout_width="wrap_content"
                android:layout_height="129dp"
                android:choiceMode="singleChoice"
                tools:ignore="NestedScrolling" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>